<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.izadalab.belajarintent.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_act"/>
    <Button
        android:id="@+id/btn_move_activity_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_data"/>
    <Button
        android:id="@+id/btn_move_activity_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_object"/>
    <Button
        android:id="@+id/btn_dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_number"/>
    <Button
        android:id="@+id/btn_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_for_result"/>




</LinearLayout>
